--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 /node_modules
 /public/hot
 /public/storage
-/storage
+/storage/*.key
+/storage/framework/cache/*
+/storage/framework/sessions/*
+/storage/framework/views/*
+/storage/logs/*
 /vendor
 /.idea
 /.vscode
