--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
     "autoload": {
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "app/Libraries/Sms51ym",
+            "app/Libraries/Smsmaizi"
         ],
         "psr-4": {
             "App\\": "app/"
