--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "guzzlehttp/guzzle": "~6.0@dev"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
@@ -58,7 +59,8 @@
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "secure-http": false
     },
     "minimum-stability": "dev",
     "prefer-stable": true
