--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "eaglewu/swoole-ide-helper": "dev-master",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "~6.0@dev",
         "laravel/framework": "5.6.*",
