--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.1.3",
         "eaglewu/swoole-ide-helper": "dev-master",
         "fideloper/proxy": "^4.0",
+        "germey/geetest": "^3.0",
         "guzzlehttp/guzzle": "~6.0@dev",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
