--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,14 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+GEETEST_ID=3ec47851f62e1aa911419263e38f6662
+GEETEST_KEY=c25440fb992e595418618c51c113f561
+
+APP_THEWOLFPWD=
+APP_THEWOLFNAME=
+
+APP_YIMAPWD=
+APP_YIMANAME=
+
